@@ -98,18 +98,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-  * mod_authz_dbm: Support the expression parser within the require directives.
-    trunk patch: http://svn.apache.org/r1554170
-                 http://svn.apache.org/r1554181
-    2.4.x patch: trunk works (modulo CHANGES and log-message-tags)
-    +1: minfrin, jim, covener
-
-  * mod_authz_groupfile: Support the expression parser within the require directives.
-    trunk patch: http://svn.apache.org/r1554175
-                 http://svn.apache.org/r1554184
-    2.4.x patch: trunk works (modulo CHANGES and log-message-tags)
-    +1: minfrin, jim, covener
-
   * mod_authz_host: Support the expression parser within the require directives.
     trunk patch: http://svn.apache.org/r1554188
     2.4.x patch: trunk works (modulo CHANGES and log-message-tags)
